--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nezaldi",
   "version": "0.1.0",
-  "description": "Proxy ",
+  "description": "NodeJS proxy server intended to be used during development of SPAs that use APIs under the same domain.",
   "main": "server.js",
   "scripts": {
-    "start:proxy": "node server.js --conf=e2e.conf.json",
+    "start:proxy": "node ./server",
     "start:dummy": "node dummyServer.js",
     "start:test": "npm run start:proxy & npm run start:dummy",
-    "start": "node server.js",
-    "test": "test"
+    "start": "node ./server",
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,16 @@
     "Node",
     "Proxy"
   ],
-  "author": "Apigee",
-  "license": "ISC",
+  "author": "Oscar Ponce",
+  "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.13.4",
     "http-proxy": "^1.13.2"
+  },
+  "devDependencies": {
+    "jasmine": "^2.4.1"
+  },
+  "bin": {
+    "nezaldi": "./server"
   }
 }
