--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nezaldi",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "NodeJS proxy server intended to be used during development of SPAs that use APIs under the same domain.",
   "main": "server.js",
   "scripts": {
-    "start:proxy": "node ./server",
+    "start:proxy": "node ./server.js",
     "start:dummy": "node dummyServer.js",
     "start:test": "npm run start:proxy & npm run start:dummy",
-    "start": "node ./server",
+    "start": "node ./server.js",
     "test": "jasmine"
   },
   "repository": {
@@ -29,6 +29,6 @@
     "jasmine": "^2.4.1"
   },
   "bin": {
-    "nezaldi": "./server"
+    "nezaldi": "./server.js"
   }
 }
