--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ atlassian-ide-plugin.xml
 /generated-sources/
 /node_modules/
 /elm-stuff
-
+src/dashboard/build
 # Tes configuration
 .nezaldi.json
