Adding svg MIME type and minor fixes on dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ atlassian-ide-plugin.xml
 /generated-sources/
 /node_modules/
 /elm-stuff
-src/dashboard/build
+/src/dashboard/build/elm.js
 # Tes configuration
 .nezaldi.json
